--- a/index.html
+++ b/index.html
@@ -396,10 +396,13 @@
     <h2>Skills</h2>
     <ul class="skills-list">
       <li>Software Testing</li>
+      <li>Manual Testing</li>
       <li>Troubleshooting</li>
       <li>Base Networking</li>
-      <li>Microsoft Office / Google Workspace</li>
+      <li>Microsoft Office</li>
+      <li>Windows OS</li>
       <li>Communication & Collaboration</li>
+      <li>Adaptive & Fast Learner</li>
     </ul>
   </section>
 
@@ -411,10 +414,12 @@
       <li><i class='bx bxl-unity'></i> Unity</li>
       <li><i class='bx bxl-android'></i> Android Studio</li>
       <li><i class='bx bxl-postgresql'></i> PostgreSQL</li>
-      <li><i class='bx bxl-microsoft'></i> Microsoft Excel</li>
+      <li><i class='bx bxl-microsoft'></i> Microsoft Office</li>
       <li><i class='bx bxl-chrome'></i> Chrome DevTools</li>
       <li><i class='bx bx-paint'></i> Canva</li>
-      <li><i class='bx bx-notepad'></i> Notion</li>
+      <li><i class='bx bx-docker'></i> Docker</li>
+      <li><i class='bx bx-python'></i> Python</li>
+      <li><i class='bx bx-html'></i> HTML</li>
     </ul>
   </section>
 
