--- a/index.html
+++ b/index.html
@@ -417,9 +417,9 @@
       <li><i class='bx bxl-microsoft'></i> Microsoft Office</li>
       <li><i class='bx bxl-chrome'></i> Chrome DevTools</li>
       <li><i class='bx bx-paint'></i> Canva</li>
-      <li><i class='bx bx-docker'></i> Docker</li>
-      <li><i class='bx bx-python'></i> Python</li>
-      <li><i class='bx bx-html'></i> HTML</li>
+      <li><i class='bx bxl-docker'></i> Docker</li>
+      <li><i class='bx bxl-python'></i> Python</li>
+      <li><i class='bx bxl-html'></i> HTML</li>
     </ul>
   </section>
 
