--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
       <li><i class='bx bx-paint'></i> Canva</li>
       <li><i class='bx bxl-docker'></i> Docker</li>
       <li><i class='bx bxl-python'></i> Python</li>
-      <li><i class='bx bxl-html'></i> HTML</li>
+      <li><i class='bx bxl-html5'></i> HTML</li>
     </ul>
   </section>
 
