--- a/index.html
+++ b/index.html
@@ -385,10 +385,10 @@
   <section id="about">
     <h2>About Me</h2>
     <p>
-      I’m a graduate in Informatics Engineering from UIN Bandung with an interest in various non-coding roles within the IT field. I have strong analytical, communication, and attention-to-detail skills, and I’m committed to continuous learning and professional growth in technology. Experienced in business process analysis, process modeling (BPMN, UML), manual testing, and project documentation. Detail-oriented, adaptable, and eager to grow in non-coding IT roles such as IT Support, Technical Writer, Data Analyst, and similar fields.
+      I’m a graduate in Informatics Engineering from UIN Bandung with an interest in various non-coding roles within the IT field. I have solid analytical, communication, and documentation skills, supported by experience in business process analysis, requirements gathering, BPMN/UML modeling, and project documentation. I’m detail-oriented, adaptable, and committed to continuous learning. I aim to grow in roles such as Business Analyst, IT Support, Technical Writer, or other analysis-focused positions within technology.
     </p>
-    <a href="assets/Resume Audry Raihan.pdf" download class="download-btn">
-      <i class='bx bx-download'></i> Download Resume
+    <a href="assets/CV-Audry Raihan.pdf" download class="download-btn">
+      <i class='bx bx-download'></i> Download CV
     </a>
   </section>
 
@@ -401,8 +401,11 @@
       <li>Base Networking</li>
       <li>Microsoft Office</li>
       <li>Windows OS</li>
+      <li>Business Process Modeling (BPMN)</li>
+      <li>Data Analyst</li>
       <li>Communication & Collaboration</li>
       <li>Adaptive & Fast Learner</li>
+      
     </ul>
   </section>
 
@@ -417,6 +420,8 @@
       <li><i class='bx bxl-microsoft'></i> Microsoft Office</li>
       <li><i class='bx bxl-chrome'></i> Chrome DevTools</li>
       <li><i class='bx bx-paint'></i> Canva</li>
+      <li><i class='bx bx-git-compare'></i> Draw.io</li>
+      <li><i class='bx bx-columns'></i> Wekan</li>
       <li><i class='bx bxl-docker'></i> Docker</li>
       <li><i class='bx bxl-python'></i> Python</li>
       <li><i class='bx bxl-html5'></i> HTML</li>
@@ -431,7 +436,8 @@
         Thesis project titled <em>“Implementasi Algoritma Fisher-Yates Shuffle dalam Penyelesaian Game Fun Fruit Crush Berbasis Android”</em>.
         This game applies the Fisher-Yates algorithm to generate a fair and efficient random arrangement of elements. The results include a p-value to evaluate the fairness of the element distribution, a runs test to measure randomness, and a heatmap visualization to represent the pattern.
       </p>
-      <a href="https://github.com/AudryRaihan/Fun-Fruit">https://github.com/AudryRaihan/Fun-Fruit</a>
+      <a href="https://github.com/AudryRaihan/Fun-Fruit">Github</a>
+      <a href="https://drive.google.com/drive/folders/1Z6B-uIINhKEahDAcoAN6up6qeQy-Nynb?usp=sharing">Drive</a>
     </div>
 
     <div class="project-card">
@@ -439,6 +445,7 @@
       <p>
         Contributed to academic service digital transformation by analyzing business processes, modeling workflows (BPMN), and creating detailed documentation using draw.io and Wekan. Collaborated with development teams to design system blueprints and improve efficiency.
       </p>
+      <a href="https://drive.google.com/drive/folders/1Z5CbUwNpX3jAR1AdBMd_q8lvjpQEx7_N?usp=sharing">Drive</a>
     </div>
   </section>
 
